back to original menu
that took a long time to figure out. Beach variables converted to Json and back to object. Now usable. No beach switch Yet.

--- a/surf app api/index.html
+++ b/surf app api/index.html
@@ -21,10 +21,12 @@
             <!-- <p class="menu_list">batham</p>
             <p class="menu_list">gwnver</p> -->
             <div id="menu_list"></div>
-            <form id="beach_form">
+            <form id="beach_form" action="">
                 <label for="beaches"></label>
                 <select name="beaches" id="beach_dropdown"></select>
+                <input id="submit_beach" type="submit" value="Submit">
             </form>
+             
         </div>
 
         <section class="main">
