--- a/surf app api/index.html
+++ b/surf app api/index.html
@@ -45,7 +45,7 @@
                     </svg></div>
 
                 <div class="info">
-                    <div class="beach"> Bantham</div>
+                    <div id="beach"> Bantham</div>
                     <div class="time">11:49 23/07/22</div>
                 </div>
                 <div class="compass"><svg width="100%" height="100%" viewBox="0 0 800 600" version="1.1"
