complete basic prototype for mobile

--- a/surf app api/index.html
+++ b/surf app api/index.html
@@ -13,7 +13,13 @@
 
 <body>
 
+    <div id="rotate_screen">
+        <img src="images/rotate90.svg" alt="rotate90">
+    </div>
+
     <div class=container>
+
+        
 
 
 
